  [Michele Simionato]
  * Added a /v1/:calc_id/abort route to the engine server and Abort buttons
    to the WebUI
  * Fixed the seeds properly in the case of vulnerability functions with PMFs:
    now even if the ground motion fields are all equal, the risk numbers
    will be different since there is a different seed per each field
  * Stored a rupture loss table in event based risk calculations
  * Made sure that the number of effective ruptures is stored in csm_info
  * Fixed the HMTK tests to work with numpy from 1.11 to 1.14
  * Added a command `oq shell` to open an embedded (I)Python shell
  * Turned the 'realizations' output into a dynamic output

  [Matteo Nastasi]
  * Implemented an API `/v1/on_same_fs` to check filesystem accessibility
    between engine and a client application.

  [Michele Simionato]
  * Reduced the data transfer when computing the hazard curves in postprocessing
  * Removed the FilteredSiteCollection class

  [Nick Ackerley]
  * Some improvements to the plotting routines of the HMTK

  [Michele Simionato]
  * Removed the ability to run `oq engine --run job_h.ini,job_r.ini`
  * Forbidden the site model in gmf_ebrisk calculations
  * When the option `--hc` is given the ruptures can now be read directly
    from the workers, thus saving some startup time
  * Optimized the storage of the ruptures: the site IDs are not saved anymore
  * Added a check for missing risk_investigation_time
  * Reduced the data transfer in the gmf_ebrisk calculator
  * Now the gmf_ebrisk calculator builds the aggregate loss curves too
  * Extended the gmf_ebrisk calculator to use the GMFs produced by an event
    based hazard calculation, both via CSV and via the --hc option
  * Fixed a performance bug in the computations of the aggregate loss curves
    by reading the full event loss table at once
  * Fixed oq zip to work with gmf_ebrisk calculations
  * Fixed a serious bug in the gmf_ebrisk calculator: the results were in most