@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Improved the display names for the risk outputs
   * Added a /v1/:calc_id/abort route to the engine server and Abort buttons
     to the WebUI
   * Fixed the seeds properly in the case of vulnerability functions with PMFs:
